--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "webpack": "^5.46.0",
