--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "html-webpack-plugin": "^5.3.2",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
+    "typescript": "^4.3.5",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
