--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "start": "npx webpack serve --mode development --open --hot"
+    "test": "npx jest",
+    "lint": "npx eslint --ext .js,.jsx,.ts,.tsx --fix ./",
+    "start": "npx webpack serve --mode development --open --hot",
+    "check": "npm run lint",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -33,6 +36,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
     "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.1",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5",
