--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@storybook/addon-controls": "^6.3.7",
     "@storybook/addon-essentials": "^6.3.7",
     "@storybook/addon-links": "^6.3.7",
+    "@storybook/builder-webpack5": "^6.3.7",
+    "@storybook/manager-webpack5": "^6.3.7",
     "@storybook/react": "^6.3.7",
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
