--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint": "npx eslint --ext .js,.jsx,.ts,.tsx --fix ./",
     "build": "npx webpack --mode production --node-env production",
     "start": "npx webpack serve --mode development --open --hot",
-    "check": "npm run lint",
+    "check": "npm test && npm run lint",
     "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
@@ -36,6 +36,9 @@
     "@storybook/builder-webpack5": "^6.3.7",
     "@storybook/manager-webpack5": "^6.3.7",
     "@storybook/react": "^6.3.7",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@types/jest": "^27.0.1",
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
