--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "otus-reactjs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.tsx",
   "scripts": {
-    "test": "npx jest",
-    "lint": "npx eslint --ext .js,.jsx,.ts,.tsx --fix ./",
-    "build": "npx webpack --mode production --node-env production",
-    "start": "npx webpack serve --mode development --open --hot",
+    "test": "jest",
+    "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix ./",
+    "build": "webpack --mode production --node-env production",
+    "start": "webpack serve --mode development --open --hot",
     "check": "npm test && npm run lint",
-    "prepare": "husky install",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token=2ae71491695e"
+    "chromatic": "chromatic --project-token=2ae71491695e"
   },
   "repository": {
     "type": "git",
