--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@emotion/core": "^10.1.1",
+    "@emotion/styled": "^10.0.27",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
