--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/jest": "^27.0.1",
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
+    "@types/underscore": "^1.11.3",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "babel-jest": "^27.0.6",
@@ -51,6 +52,7 @@
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.3.2",
     "typescript": "^4.3.5",
     "webpack": "^5.46.0",
@@ -61,6 +63,7 @@
     "@emotion/core": "^10.1.1",
     "@emotion/styled": "^10.0.27",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "underscore": "^1.13.1"
   }
 }
