--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.tsx",
   "scripts": {
+    "test-ts": "tsc --noEmit",
     "test": "jest",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --fix ./",
     "build": "webpack --mode production --node-env production",
