--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
     "chromatic": "^5.9.2",
+    "css-loader": "^6.2.0",
     "enzyme": "^3.11.0",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
@@ -58,6 +59,7 @@
     "jest": "^27.0.6",
     "node-fetch": "^2.6.1",
     "prettier": "^2.3.2",
+    "style-loader": "^3.2.1",
     "typescript": "^4.3.5",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2",
@@ -66,6 +68,7 @@
   "dependencies": {
     "@emotion/core": "^10.1.1",
     "@emotion/styled": "^10.0.27",
+    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "underscore": "^1.13.1"
