--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@emotion/babel-plugin": "^11.3.0",
     "@storybook/addon-actions": "^6.3.7",
     "@storybook/addon-controls": "^6.3.7",
     "@storybook/addon-essentials": "^6.3.7",
@@ -47,6 +48,7 @@
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
+    "babel-plugin-emotion": "^11.0.0",
     "chromatic": "^5.9.2",
     "css-loader": "^6.2.0",
     "enzyme": "^3.11.0",
@@ -67,7 +69,7 @@
   },
   "dependencies": {
     "@emotion/core": "^10.1.1",
-    "@emotion/styled": "^10.0.27",
+    "@emotion/styled": "^11.3.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
