--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   },
   "dependencies": {
     "@emotion/core": "^10.1.1",
+    "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
