--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@testing-library/user-event": "^13.2.1",
     "@types/enzyme": "^3.10.9",
     "@types/jest": "^27.0.1",
+    "@types/ramda": "^0.27.45",
     "@types/react": "^17.0.17",
     "@types/react-dom": "^17.0.9",
     "@types/underscore": "^1.11.3",
@@ -73,6 +74,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "normalize.css": "^8.0.1",
+    "ramda": "^0.27.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "underscore": "^1.13.1"
