--- a/package.json
+++ b/package.json
@@ -80,6 +80,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
+    "redux": "^4.1.1",
+    "reselect": "^4.0.0",
     "underscore": "^1.13.1"
   }
 }
