--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "underscore": "^1.13.1"
   }
