--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
+    "redux-dynamic-modules": "^5.2.3",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "underscore": "^1.13.1"
