--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.1",
     "redux-dynamic-modules": "^5.2.3",
+    "redux-dynamic-modules-saga": "^5.2.3",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
     "underscore": "^1.13.1"
