--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "jest": "^27.0.6",
     "node-fetch": "^2.6.1",
     "prettier": "^2.3.2",
+    "redux-saga-test-plan": "^4.0.4",
     "style-loader": "^3.2.1",
     "typescript": "^4.3.5",
     "webpack": "^5.46.0",
