--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-jest": "^27.0.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-emotion": "^11.0.0",
+    "babel-plugin-jsx-remove-data-test-id": "^3.0.0",
     "chromatic": "^5.9.2",
     "css-loader": "^6.2.0",
     "enzyme": "^3.11.0",
